syntax = "proto3";

package skysoft.enterprise.backend.bots;
option csharp_namespace = "SkySoft.Enterprise.Notifications.Grpc.Protos.Bots";

service Bots{
  rpc RunScenario(Scenario) returns (Empty);
}

message Scenario{
  string Id = 1;
  string UserIdentifier = 2;
  ScenarioType Type = 3;
  ScenarioData Data = 4;
  BotType BotType = 5;
}

message ScenarioData{
  string Message = 1;
  map<string, string> Parameters = 2;
}

message Empty{

}

enum ScenarioType{
  MfaScenario = 0;
  NotificationScenario = 1;
  TaskDialogScenario = 2;
}

enum BotType{
  TelegramBot = 0;
  SlackBot = 1;
}
